--- a/proxyCustom/pom.xml
+++ b/proxyCustom/pom.xml
@@ -26,10 +26,10 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.aspectj</groupId>-->
-      <!--<artifactId>aspectjweaver</artifactId>-->
-      <!--<version>1.8.13</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.1.5.RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
