--- a/mySpringFramework/pom.xml
+++ b/mySpringFramework/pom.xml
@@ -32,5 +32,12 @@
       <artifactId>spring-context</artifactId>
       <version>5.2.10.RELEASE</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>2.0.5</version>
+    </dependency>
+
   </dependencies>
 </project>
