--- a/simulate-springboot/pom.xml
+++ b/simulate-springboot/pom.xml
@@ -46,6 +46,17 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+      <version>9.0.33</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+      <version>9.0.33</version>
+    </dependency>
   </dependencies>
 
   <build>
