--- a/simulate-springboot/pom.xml
+++ b/simulate-springboot/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.hz</groupId>
   <artifactId>simulate-springboot</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>simulate-springboot Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -50,12 +50,17 @@
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-core</artifactId>
-      <version>9.0.33</version>
+      <version>9.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-el</artifactId>
+      <version>9.0.13</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
-      <version>9.0.33</version>
+      <version>9.0.13</version>
     </dependency>
   </dependencies>
 
