--- a/simulate-springboot/pom.xml
+++ b/simulate-springboot/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.hz</groupId>
   <artifactId>simulate-springboot</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>simulate-springboot Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -64,14 +64,14 @@
     </dependency>
   </dependencies>
 
-  <!--<build>-->
-    <!--<plugins>-->
-      <!--<plugin>-->
-        <!--<groupId>org.apache.tomcat.maven</groupId>-->
-        <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-        <!--<version>2.2</version>-->
-      <!--</plugin>-->
-    <!--</plugins>-->
-  <!--</build>-->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
