--- a/springboot-property/pom.xml
+++ b/springboot-property/pom.xml
@@ -14,6 +14,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.3.7.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+
 
     </dependencies>
 
