--- a/springboot-starter-redis/pom.xml
+++ b/springboot-starter-redis/pom.xml
@@ -5,16 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hz</groupId>
-    <artifactId>springboot-myRedis</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <artifactId>springboot-starter-redis</artifactId>
+    <version>1.1.3-SNAPSHOT</version>
+
+    <properties>
+        <spring.boot.starter.web.version>2.0.3.RELEASE</spring.boot.starter.web.version>
+        <jedis.version>2.7.3</jedis.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.3.RELEASE</version>
+            <version>${spring.boot.starter.web.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -25,8 +29,9 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.7.3</version>
+            <version>${jedis.version}</version>
         </dependency>
+
     </dependencies>
 
     <!-- 编译 jar 属性-->
