--- a/springboot-redis-demo/pom.xml
+++ b/springboot-redis-demo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hz</groupId>
-    <artifactId>springboot-demo</artifactId>
+    <artifactId>springboot-redis-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -17,8 +17,8 @@
 
         <dependency>
             <groupId>com.hz</groupId>
-            <artifactId>springboot-myRedis</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <artifactId>springboot-starter-redis</artifactId>
+            <version>1.1.2-SNAPSHOT</version>
         </dependency>
 
 
