--- a/my-springframework/pom.xml
+++ b/my-springframework/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mySpring</groupId>
-  <artifactId>mySpringFramework</artifactId>
+  <artifactId>my-springframework</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
