--- a/springboot-disk/pom.xml
+++ b/springboot-disk/pom.xml
@@ -6,15 +6,20 @@
 
     <groupId>com.hz</groupId>
     <artifactId>springboot-disk</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <dependencies>
-        <!--暂时以非web项目启动 后面在考虑使用 springboot-starter-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.1.1.RELEASE</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+            <!--<version>2.0.3.RELEASE</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash;暂时以非web项目启动 后面在考虑使用 springboot-starter&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-context</artifactId>-->
+            <!--<version>5.1.1.RELEASE</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
