--- a/spring-tx/pom.xml
+++ b/spring-tx/pom.xml
@@ -6,8 +6,8 @@
 
   <groupId>com.hz</groupId>
   <artifactId>spring-tx</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>spring-tx Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -38,13 +38,11 @@
           <version>1.2.54</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
       <dependency>
-          <groupId>commons-lang</groupId>
-          <artifactId>commons-lang</artifactId>
-          <version>2.6</version>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.9</version>
       </dependency>
-
 
       <dependency>
           <groupId>mysql</groupId>
@@ -68,6 +66,12 @@
           <groupId>org.mybatis</groupId>
           <artifactId>mybatis-spring</artifactId>
           <version>2.0.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.hz</groupId>
+          <artifactId>springboot-starter-trim</artifactId>
+          <version>1.0.0-SNAPSHOT</version>
       </dependency>
 
       
