--- a/springboot-starter-trim/pom.xml
+++ b/springboot-starter-trim/pom.xml
@@ -26,11 +26,11 @@
             <version>3.9</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-api</artifactId>-->
+            <!--<version>1.7.30</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
