spring事务源码解析

--- a/spring-tx/pom.xml
+++ b/spring-tx/pom.xml
@@ -69,9 +69,15 @@
       </dependency>
 
       <dependency>
-          <groupId>com.hz</groupId>
+          <groupId>com.nbaisino</groupId>
           <artifactId>springboot-starter-trim</artifactId>
-          <version>1.0.0-SNAPSHOT</version>
+          <version>1.0.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.nbaisino</groupId>
+          <artifactId>springboot-starter-redis</artifactId>
+          <version>1.0.0</version>
       </dependency>
 
       
