--- a/spring-tx/pom.xml
+++ b/spring-tx/pom.xml
@@ -23,7 +23,28 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
+          <exclusions>
+              <exclusion>
+                  <artifactId>log4j-over-slf4j</artifactId>
+                  <groupId>org.slf4j</groupId>
+              </exclusion>
+              <exclusion>
+                  <artifactId>org.springframework.boot</artifactId>
+                  <groupId>spring-boot-starter-tomcat</groupId>
+              </exclusion>
+              <!-- 切换log4j2日志读取 -->
+              <exclusion>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-logging</artifactId>
+              </exclusion>
+          </exclusions>
           <version>2.0.5.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-log4j2</artifactId>
+          <version>2.0.1.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -80,7 +101,41 @@
           <version>1.0.0</version>
       </dependency>
 
-      
+      <dependency>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
+          <version>3.1</version>
+      </dependency>
+      <!-- 初始化 yml文件-->
+      <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-yaml</artifactId>
+          <version>2.11.1</version>
+      </dependency>
+      <!-- 加上这个，上面那个包才能正常工作 -->
+      <!-- JSON相关包 -->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.11.1</version>
+      </dependency>
+      <!-- 加上这个，上面那个包才能正常工作 -->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.11.1</version>
+      </dependency>
+
   </dependencies>
+
+    <!-- 编译 jar 属性-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
